--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "modernizr": "~2.6.2",
     "bootstrap": "~3.0.2",
     "backbone-pageable": "~1.4.1",
-    "spin.js": "~1.3.2"
+    "spin.js": "~1.3.2",
+    "nvd3": "~1.1.14-beta"
   },
   "devDependencies": {}
 }
